force-app/main/default/objects/QuestionVariant__c/QuestionVariant__c.object-meta.xml
<CustomObject>
    <description>Question Variant defines a variant to a Question, such as language. Question Variant is related to Question and Variant.</description>
    <label>Question Variant</label>
    <nameField>
        <displayFormat>QVAR-{000000000}</displayFormat>
        <label>QuestionVariant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions Variant</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>