force-app/main/default/objects/QuestionVariant__c/fields/QuestionText__c.field-meta.xml
<CustomField>
    <fullName>QuestionText__c</fullName>
    <label>Question Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>